--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Vue.js similar lightweight reactivity library.",
   "main": "main.js",
   "scripts": {
-    "release": "standard-version"
+    "release": "standard-version",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
