--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Vue.js similar lightweight reactivity library.",
   "main": "main.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "release": "standard-version",
     "publish": "npm publish"
   },
@@ -22,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/ismailceylan/reactivity/issues"
   },
-  "homepage": "https://github.com/ismailceylan/reactivity#readme"
+  "homepage": "https://github.com/ismailceylan/reactivity#readme",
+  "devDependencies": {
+    "vite": "^4.5.0"
+  }
 }
